// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`azure-rbac - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Helps users find the right Azure RBAC role for an identity with least privilege access, then generate CLI commands and Bicep code to assign it. Also provides guidance on permissions required to grant roles.
USE FOR: "what role should I assign", "least privilege role", "RBAC role for", "role to read blobs", "role for managed identity", "custom role definition", "assign role to identity", "what role do I need to grant access", "permissions to assign roles", "User Access Administrator", "Microsoft.Authorization/roleAssignments/write".
DO NOT USE FOR: creating or configuring managed identities, or general Azure security hardening; those are out of scope for this role-selection skill.
",
  "extractedKeywords": [
    "access",
    "administrator",
    "also",
    "assign",
    "authorization",
    "azure",
    "bicep",
    "blobs",
    "cli",
    "code",
    "commands",
    "configuring",
    "creating",
    "custom",
    "definition",
    "find",
    "function",
    "general",
    "generate",
    "grant",
    "guidance",
    "hardening",
    "helps",
    "identities",
    "identity",
    "least",
    "managed",
    "microsoft",
    "need",
    "permissions",
    "privilege",
    "provides",
    "rbac",
    "read",
    "required",
    "right",
    "role",
    "role-selection",
    "roleassignments",
    "roles",
    "scope",
    "security",
    "should",
    "skill",
    "storage",
    "then",
    "this",
    "those",
    "user",
    "users",
    "what",
    "with",
    "write",
  ],
  "name": "azure-rbac",
}
`;

exports[`azure-rbac - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "access",
  "administrator",
  "also",
  "assign",
  "authorization",
  "azure",
  "bicep",
  "blobs",
  "cli",
  "code",
  "commands",
  "configuring",
  "creating",
  "custom",
  "definition",
  "find",
  "function",
  "general",
  "generate",
  "grant",
  "guidance",
  "hardening",
  "helps",
  "identities",
  "identity",
  "least",
  "managed",
  "microsoft",
  "need",
  "permissions",
  "privilege",
  "provides",
  "rbac",
  "read",
  "required",
  "right",
  "role",
  "role-selection",
  "roleassignments",
  "roles",
  "scope",
  "security",
  "should",
  "skill",
  "storage",
  "then",
  "this",
  "those",
  "user",
  "users",
  "what",
  "with",
  "write",
]
`;
